# carve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows_msvc.cmd  configure.ac
common/: CMakeLists.txt  geom_draw.cpp  geom_draw.hpp  geometry.cpp  geometry.hpp  opts.hpp  read_ply.cpp  read_ply.hpp  rgb.hpp  scene.cpp  scene.hpp  stringfuncs.hpp  write_ply.cpp  write_ply.hpp
examples/: CMakeLists.txt  custom_collector.cpp  detail_clip.cpp  texture_example.cpp
include/carve/: aabb.hpp  aabb_impl.hpp  carve.hpp  classification.hpp  collection.hpp  collection_types.hpp  colour.hpp  convex_hull.hpp  csg.hpp  csg_triangulator.hpp  debug_hooks.hpp  djset.hpp  edge_decl.hpp  exact.hpp  face_decl.hpp  face_impl.hpp  faceloop.hpp  geom.hpp  geom2d.hpp  geom3d.hpp  geom_impl.hpp  heap.hpp  input.hpp  interpolator.hpp  intersection.hpp  iobj.hpp  kd_node.hpp  math.hpp  matrix.hpp  mesh.hpp  mesh_impl.hpp  mesh_ops.hpp  mesh_simplify.hpp  octree_decl.hpp  octree_impl.hpp  pointset_decl.hpp  polyhedron_base.hpp  polyhedron_decl.hpp  polyhedron_impl.hpp  polyline_decl.hpp  (+16 more)
include/carve/collection/unordered/: std_impl.hpp
lib/: CMakeLists.txt  convex_hull.cpp  csg.cpp  csg_collector.cpp  csg_data.hpp  csg_detail.hpp  face.cpp  geom.cpp  geom2d.cpp  geom3d.cpp  intersect.cpp  intersect_classify_common.hpp  intersect_classify_common_impl.hpp  intersect_classify_edge.cpp  intersect_classify_group.cpp  intersect_classify_simple.cpp  intersect_common.hpp  intersect_debug.cpp  intersect_face_division.cpp  intersect_group.cpp  intersect_half_classify_group.cpp  intersection.cpp  math.cpp  mesh.cpp  octree.cpp  pointset.cpp  polyhedron.cpp  polyline.cpp  shewchuk_predicates.cpp  timing.cpp  triangle_intersection.cpp  triangulator.cpp
src/: CMakeLists.txt  close_manifold.cpp  convert.cpp  cut.cpp  extrude.cpp  face_merge.cpp  glu_triangulator.cpp  glu_triangulator.hpp  intersect.cpp  mesh_simplify.cpp  selfintersect.cpp  slice.cpp  triangulate.cpp  view.cpp
tests/: CMakeLists.txt  exact_unittest.cpp  geom2d_unittest.cpp  geom3d_unittest.cpp  heap_unittest.cpp  hook_unittest.cpp  mersenne_twister.h  mesh_triangulate_unittest.cpp  mesh_unittest.cpp  offset.cpp  problem.cpp  shewchuk_unittest.cpp  stdlib_conflict.cpp  test_aabb.cpp  test_aabb_tri.cpp  test_carve_polyhedrons_2.cpp  test_csg_edge_interpolate.cpp  test_csg_interpolate.cpp  test_eigen.cpp  test_geom.cpp  test_hole_incorporate.cpp  test_interpolate.cpp  test_intersect.cpp  test_rescale.cpp  test_slice.cpp  test_slice_classify.cpp  test_spacetree.cpp  test_tri_pt_dist.cpp  test_triangulate.cpp  tetrahedron.cpp  tri_point_distance_unittest.cpp  triangle_intersection_unittest.cpp  triangulate_unittest.cpp
win32/: Carve.sln
win32/carvelib/: carvelib.vcxproj
win32/fileformats/: fileformats.vcxproj  fileformats.vcxproj.filters
win32/glew/: glew.vcxproj
win32/gloop/: gloop.vcxproj  gloop.vcxproj.filters
win32/glui/: glui.vcxproj
win32/intersect/: intersect.vcxproj
win32/texture_example/: texture_example.vcxproj
win32/view/: view.vcxproj
