include_directories("${carve_SOURCE_DIR}/include")
include_directories("${carve_SOURCE_DIR}/external/GLOOP/include")
include_directories("${carve_SOURCE_DIR}/external/GLEW/include")
include_directories("${carve_SOURCE_DIR}/external/GLUI/include")

add_library(carve_fileformats      STATIC read_ply.cpp write_ply.cpp)
target_compile_features(carve_fileformats PUBLIC cxx_uniform_initialization)
add_library(carve_misc             STATIC geometry.cpp)
target_compile_features(carve_misc PUBLIC cxx_uniform_initialization)
if(CARVE_WITH_GUI)
  add_library(carve_ui             STATIC geom_draw.cpp scene.cpp)
  target_compile_features(carve_ui PUBLIC cxx_uniform_initialization)
endif(CARVE_WITH_GUI)
